  * Improvements? to color model.
  * Improvements to GMAP plugin.
  * Added city to long/city to lat block to gmap plugin (Yash).
  * Added heap empty? block to HEAP plugin.

0.8
  * Fixed namespace collisions with plugin globals.
  * No longer overwriting existing plugin globals when adding new ones.
  * Fixed memory leak in while and until blocks.

TODO:
  * Save errors
  * Save to javascript
  * RTL support
  * Make expand an array, one element for each arg or slot
  * User-defined block types
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support
  * Unit tests
  * Make error messages extendable with plugins.

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays
  * Color mixer that outputs a stack: set hue; set value; set chroma.

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Sometimes returning to backgrounded project results in empty project
  * Loading macros there is a funny collapsed state sometimes.
  * Somehow we end up in a browser resize loop??? (2842 console messages are
    not shown js/activity.js:770)
  * Python show block not compatible with JS show block.
  * Not serious, but there is still a race condition when creating
    if-then-else blocks (so there is a work-around in place).
  * Break doesn't work in forever loops.
  * Sometimes clamp block highlight scale is too large.
  * Sometimes docking position is not scaled properly when dragging block
    after block resize.

ANDROID-SPECIFIC BUGS:
  * Camera doesn't work on Android